# Cricket-Data-SImulator

./: .gitattributes  .gitignore  CLAUDE_MAINTENANCE.md  automate_claude.py  claude_instructions.md  count.py  cricket_data.db  cricket_simulator.py  package-lock.json  requirements.txt  test_ca.html
ai/: ml_pipeline.py  predictor.py  train.py  tune_model.py
api/: archive.py  main.py
data/: async_scraper.py  check_ids.py  check_ranges.py  collector.py  cricbuzz_crawler.py  cricbuzz_history_db.jsonl  cricbuzz_parser.py  cricbuzz_spider.py  cricket_db.sqlite-journal  cricketarchive_spider.py  cricsheet.py  cricsheet_teams.json  db.py  discovery_spider.py  domestic_collector.py  espn_crawler.py  espn_history_db.jsonl  espn_spider.py  ingest_real_data.py  ingestion.py  live.py  load_balancer.py  local_disk_spider.py  massive_seed.py  mock_scrape.py  models.py  orchestrator.py  organize_data.py  parser.py  player_stats.json  reset_failed.py  schema.sql  scraper_config.py  seed_db.py  seed_mock_db.py  stats_builder.py  sync_queue.py  t20_transitions.json  teams.json  unify_ca.py
engine/: advanced_stats.py  auto_git_push.py  build_schema.py  ca_fast_scraper.py  entity_resolution.py  etl_migration.py  full_match_simulator.py  markov_simulator.py  nlp_router.py  pw_scraper.py  rain_rule.py  scraper.py  simulator.py  stats_compiler.py  statsguru.py  transition_builder.py  unify_sources.py  warp_scraper.py
engine/rust_scraper/: Cargo.toml
engine/rust_scraper/src/: main.rs
frontend/: package-lock.json  package.json
models/: advanced_predictor.pth  match_predictor.pth
(+4496 files in other folders)
