[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"] }
rusqlite = { version = "0.31", features = ["bundled"] }
scraper = "0.19"
regex = "1.10"
anyhow = "1.0"
indicatif = "0.17"
futures = "0.3"
